fix(z-index): Fixing z-index of the dropdowns/selects

--- a/src/elements/dropdown/_Dropdown.scss
+++ b/src/elements/dropdown/_Dropdown.scss
@@ -21,7 +21,7 @@ novo-dropdown {
         .dropdown-container {
             max-height: 500px;
             display: block;
-            z-index: 2;
+            z-index: 1000;
             border-radius: 2px;
             top: 100%;
             margin-top: 5px;
