--- a/src/elements/picker/_Picker.scss
+++ b/src/elements/picker/_Picker.scss
@@ -105,7 +105,7 @@ picker-null-recent-results {
     &.active {
         max-height: 200px;
         overflow: auto;
-        z-index: 2;
+        z-index: 1000;
     }
     &:focus {
         outline: none;
